# OpenGLStarter

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  README.md
dependencies/: README.md
dependencies/glad/: CMakeLists.txt
dependencies/glad/include/glad/: glad.h
dependencies/glad/src/: glad.c
dependencies/stb/: CMakeLists.txt
include/: CMakeLists.txt
src/: CMakeLists.txt  main.cpp
src/advanced/: CMakeLists.txt  Mandelbrot.cpp  Shaders.cpp
src/basics/: CMakeLists.txt  IndexBuffer.cpp  Organization.txt  Triangle.cpp
workshop/basics/: CMakeLists.txt  CreateWindow.cpp  Triangle.cpp
